Fix the max-width because page width is too big

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -7,6 +7,7 @@
 }
 
 header {
+    max-width: 100%;
     position: relative;
     padding: 0 2rem;
 }
